--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ figure {
   text-align: center;
 }
 
-#featured-property {
+section #featured-property {
   text-align: center;
   font-size: 15px;
   width: 800px;
